add segundo test para dht11

--- a/app/dht11/project.yml
+++ b/app/dht11/project.yml
@@ -17,6 +17,7 @@
   :default_tasks:
     - test:all
 
+
 #:test_build:
 #  :use_assembly: TRUE
 
@@ -70,6 +71,7 @@
     uint32:   UINT32
     int8:     INT8
     bool:     UINT8
+    uint:     UINT32
 
 # Add -gcov to the plugins list to make sure of the gcov plugin
 # You will need to have gcov and gcovr both installed to make it work.
